style: attempted to resolve minor overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -588,7 +588,7 @@ header nav, header h1 {
   align-items: center;
   background-color: #151B23;
   height: 75px;
-  width: 101%;
+  width: 100%;
   margin: 0 auto;
   position: absolute;
   top: 0;
@@ -651,13 +651,13 @@ main {
   align-items: center;
   z-index: 100;
   background-color: #EEE8E8;
-  min-height: calc(100vh - 250px);
+  min-height: calc(100vh - 251px);
   padding-bottom: 10px;
 }
 @media only screen and (max-width: 768px) {
   main {
     font-size: 3.5rem;
-    min-height: calc(100vh - 225px);
+    min-height: calc(100vh - 226px);
   }
 }
 main .enter-site {
